--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </ul>
   </div>
 </nav>
+	</div>
 <div class="container-full">
 
 <div class="row no-gutters">
@@ -469,7 +470,7 @@
 </div>
 
 
-
+	    </div>
 
 
 
