--- a/messages.html
+++ b/messages.html
@@ -36,6 +36,7 @@
     </ul>
   </div>
 </nav>
+	</div>
 	<div class="container-full">
 		<div class="row no-gutters" >
 			  <div class="col-12 chatareapage scrollpage">
