--- a/messages.html
+++ b/messages.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+<div class="row no-gutters">
     <div class="col-lg-12">
       <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #006633">
   <a class="navbar-brand" href="#">
@@ -37,6 +37,7 @@
   </div>
 </nav>
 	</div>
+</div>
 	<div class="container-full">
 		<div class="row no-gutters" >
 			  <div class="col-12 chatareapage scrollpage">
