--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-
+<div class="row no-gutters">
 
     <div class="col-lg-12">
       <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #006633">
@@ -40,6 +40,7 @@
   </div>
 </nav>
 	</div>
+</div>
 <div class="container-full">
 
 <div class="row no-gutters">
@@ -278,7 +279,10 @@
 
     <div class="d-flex profilee">
       <img src="image2.jpg" class="profile rounded-circle">
+      <img src="icamera.jpg" class="rounded-circle pic6">
 </div>
+
+
       <div class="d-flex edit justify-content-between flex-row " >
         <h2 " class="protext1">Your Name</h2>
         <img src="edit.png" class="pic4">
