--- a/unread.html
+++ b/unread.html
@@ -13,7 +13,7 @@
 <body>
 
 
-
+<div class="row no-gutters">
     <div class="col-lg-12">
       <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #006633">
   <a class="navbar-brand" href="#">
@@ -40,6 +40,7 @@
   </div>
 </nav>
 	</div>
+</div>
 <div class="container-full">
 
 <div class="row no-gutters">
@@ -213,7 +214,7 @@
    </div>
   </div>
     <div class="d-flex flex-column">
-  <div class="float-right text-muted">18/7.18</div>
+  <div class="float-right text-muted">18/7/18</div>
   <div class="float-right">
     <img src="one.png" class="not">
   </div>
