--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 
-
+   <div class="row no-gutters">
     <div class="col-lg-12">
       <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #006633">
   <a class="navbar-brand" href="#">
@@ -40,6 +40,7 @@
   </div>
 </nav>
 	</div>
+</div>
 <div class="container-full">
 
 <div class="row no-gutters">
