--- a/profile.html
+++ b/profile.html
@@ -279,7 +279,7 @@
 
     <div class="d-flex profilee">
       <img src="image2.jpg" class="profile rounded-circle">
-      <img src="icamera.jpg" class="rounded-circle pic6">
+      <img src="image2.jpg" class="rounded-circle pic6">
 </div>
 
 
