--- a/profile.html
+++ b/profile.html
@@ -53,9 +53,9 @@
   </button>
   <div class="dropdown-menu">
     <!-- Dropdown menu links -->
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
+    <a class="dropdown-item" href="#">New chat</a>
+    <a class="dropdown-item" href="#">Starred messages</a>
+    <a class="dropdown-item" href="#">Settings</a>
   </div>
 </div>
 </div>
