--- a/unread.html
+++ b/unread.html
@@ -44,7 +44,7 @@
 <div class="container-full">
 
 <div class="row no-gutters">
-  <div class="col-xl-4  col-lg-5 col-md-5 col-sm-12 col-12">
+  <div class="col-xl-4  col-lg-5 col-md-5 d-none d-md-block">
  <div class="col-lg-12 grey-back1">
   <img src="image2.jpg" class="rounded-circle pic3">
 <div class="btn-group dropleft">
